--- a/life-base/server-config/src/main/resources/application.yml
+++ b/life-base/server-config/src/main/resources/application.yml
@@ -3,8 +3,18 @@ server:
 spring:
   application:
     name: server-config
+  boot:
+    admin:
+      client:
+        url: http://localhost:8903/
 
 eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8901/eureka/
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
