--- a/life-base/server-gateway/src/main/resources/application.yml
+++ b/life-base/server-gateway/src/main/resources/application.yml
@@ -9,13 +9,23 @@ eureka:
 spring:
   application:
     name: server-gateway
+  sleuth:
+    web:
+      client:
+        enabled: true
+      sampler:
+        probability: 1.0
+  zipkin:
+    base-url: http://localhost:9411/
+    sender:
+      type: web
   cloud:
     gateway:
       routes:
       - id: adminapi
-        uri: lb://admin-service
+        uri: lb://monitor-service
         predicates:
-        - Path=/admin/**
+        - Path=/monitor/**
         filters:
         - StripPrefix=1
       - id: adminapi
@@ -24,3 +34,14 @@ spring:
         - Path=/user/**
         filters:
         - StripPrefix=1
+  boot:
+    admin:
+      client:
+        url: http://localhost:8903/
+
+
+  management:
+    endpoints:
+      web:
+        exposure:
+          include: "*"
