--- a/life-project/admin-service/src/main/resources/application.yml
+++ b/life-project/admin-service/src/main/resources/application.yml
@@ -3,9 +3,28 @@ server:
 
 spring:
   application:
-    name: admin-service
-
+    name: monitor-service
+  sleuth:
+    web:
+      client:
+        enabled: true
+      sampler:
+        probability: 1.0
+  zipkin:
+    base-url: http://localhost:9411/
+    sender:
+      type: web
+  boot:
+    admin:
+      client:
+        url: http://localhost:8903/
 eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8901/eureka/
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
