--- a/life-base/server-config/pom.xml
+++ b/life-base/server-config/pom.xml
@@ -28,11 +28,6 @@
     <dependencies>
 
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
-        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-config-server</artifactId>
         </dependency>
@@ -48,6 +43,7 @@
             <version>${spring-boot-admin.version}</version>
         </dependency>
 
+        <!--健康监测-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
