--- a/life-project/pom.xml
+++ b/life-project/pom.xml
@@ -18,4 +18,13 @@
         <module>project-common</module>
     </modules>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+    </dependencies>
+
 </project>
